--- a/src/componentes/footer/Footer.css
+++ b/src/componentes/footer/Footer.css
@@ -3,17 +3,17 @@ footer{
     bottom: 0;
     width: 100%;
     height: 30vh;
-    background-color: darkorchid;
+    background-color: black;
     display:flex;
     justify-content: space-evenly;
   }
 footer ul{
     list-style: none;
-    color: aliceblue;
+    color: gray;
   }
 footer ul li a{
     text-decoration: none;
-    color: white;
+    color: gray;
     display: flex;
     flex-direction: column;
     padding-top: 2vh;
