--- a/src/componentes/main/Main.css
+++ b/src/componentes/main/Main.css
@@ -9,12 +9,12 @@ body{
     margin-top: 5vh;
     margin-right: 5vw;
 }
-h1{
+.main-h{
     margin-top: 5vh;
     margin-left: 10vw;
     font-size: 5vh;
 }
-p{
+.main-p{
     margin-top: 5vh;
     margin-left: 5vw; 
     font-size: 5vh;
