--- a/src/componentes/footer/Footer.css
+++ b/src/componentes/footer/Footer.css
@@ -1,6 +1,6 @@
 footer{
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    bottom: -110%;
     width: 100%;
     height: 30vh;
     background-color: black;
@@ -21,7 +21,7 @@ footer ul li a{
 .LogoFooter{
     height: 15vh;
     display: flex;
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     margin-bottom: 10vh;
@@ -32,7 +32,7 @@ footer ul li a{
   padding: 0.5vw;
 }
 .redes{
-  position: fixed;
+  position: absolute;
   left: 0;
   bottom: 0;
   display: flex;
