--- a/src/componentes/header/Header.css
+++ b/src/componentes/header/Header.css
@@ -25,7 +25,7 @@ header a:hover{
 .Logo{
   height: 7vh;
   display: flex;
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   margin-top: 1vh;
